# ipc_study

./: CMakeLists.txt  ReadMe.md  fifo_client.c  fifo_server.c  file_descriptor.h  pipe_with_child_process.c  select_with_fd_client.c  select_with_fd_server.c  simple_pipe.c  socket_client.c  socket_server.c  twoway_pipe.c  watcher.c
